[package]
name = "hexcaster"
version = "0.1.0"
edition = "2021"
description = "Tactical roguelike on hex grids with spell-crafting"
license = "MIT"
authors = ["Katie <everthejetsets@gmail.com>"]

[dependencies]
hecs = "0.10"
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.14"
