[package]
name = "hexcaster"
version = "0.1.0"
edition = "2021"
description = "Tactical roguelike on hex grids with spell-crafting"
license = "MIT"
authors = ["Katie <everthejetsets@gmail.com>"]

[dependencies]
hecs = "0.10"
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "2.0"

[features]
default = []
online = ["ureq"]

[dependencies.ureq]
version = "2.9"
optional = true

[dev-dependencies]
tempfile = "3.14"
